<resources>
    <string name="app_name">dashboard</string>
    <string name="hello">Hello</string>
    <string name="john">John</string>
    <string name="search_sport">Search sport</string>
    <string name="academies">Academies</string>
    <string name="tournaments">Tournaments</string>
    <string name="donate">Donate</string>
    <string name="empty">Empty</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="dashboard2">TGELF</string>
    <string name="about">About</string>
    <string name="security_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="copy_right" />
    <string name="about_page_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula ligula tortor, in pellentesque dui congue ac. Vestibulum lacinia urna magna, quis cursus ante iaculis nec. Nunc ut ligula sit amet odio ultrices euismod vel vel purus. Sed lacus mauris, aliquam et placerat id</string>

    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
</resources>